tests/neg/lists/list-00.ts
/*@ hop :: (#List[{v:number| 0 <= v}]) => #List[{v:number| 0 <= v}] */
function hop(xs){
  return tail(xs);
//  return t;
}

